--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -16,6 +16,7 @@
         </div>
         <ul class='content'>
         <% day[:plans].each do |plan| %>
+        <li class='plan-list'><%= plan %></li>
         <% end %>
         </ul>
       </div>
